// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders: disable next 1`] = `
<ul
  class="jun-pagination"
  unselectable="unselectable"
>
  <li
    class="page"
  >
    页码: 2
  </li>
  <li
    class="prev"
  >
    上一页
  </li>
  <li
    class="next disabled"
  >
    下一页
  </li>
</ul>
`;

exports[`Pagination renders: disable prev 1`] = `
<ul
  class="jun-pagination"
  unselectable="unselectable"
>
  <li
    class="page"
  >
    页码: 1
  </li>
  <li
    class="prev disabled"
  >
    上一页
  </li>
  <li
    class="next"
  >
    下一页
  </li>
</ul>
`;

exports[`Pagination renders: disable prev and next 1`] = `
<ul
  class="jun-pagination"
  unselectable="unselectable"
>
  <li
    class="page"
  >
    页码: 1
  </li>
  <li
    class="prev disabled"
  >
    上一页
  </li>
  <li
    class="next disabled"
  >
    下一页
  </li>
</ul>
`;

exports[`Pagination renders: showQuickJumper, showSizeChanger 1`] = `
<ul
  class="jun-pagination"
  unselectable="unselectable"
>
  <li
    class="options"
  >
    <div
      class="jumper"
    >
      跳至
      <input
        type="text"
        value=""
      />
      页
    </div>
    <div
      class="pageSize"
    >
      <select>
        <option
          selected=""
          value="10"
        >
          10条/页
        </option>
        <option
          value="20"
        >
          20条/页
        </option>
        <option
          value="30"
        >
          30条/页
        </option>
        <option
          value="40"
        >
          40条/页
        </option>
      </select>
    </div>
  </li>
  <li
    class="page"
  >
    页码: 1
  </li>
  <li
    class="prev disabled"
  >
    上一页
  </li>
  <li
    class="next"
  >
    下一页
  </li>
</ul>
`;
